--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: aws_ai
 description: Flutter package to wrap Amazon artificial intelligence services
 version: 0.0.1
 author: Mohamed Hassan AbdulRahman <tashafeen.swd@gmail.com>
-homepage:
+homepage: https://github.com/mrahman4/aws-ai
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
